# fifa-world-cup

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/agents/: analyst.py  client.py  orchestrator.py  prompts.py  scout.py
backend/app/api/: routes.py
backend/app/crawlers/: aliases.py  base.py  espn.py  news.py  news_sources.py  seed.py  wikipedia.py
backend/app/model/: bracket_map.py  ratings.py  simulate.py  third_place_table.py  tickets.py
backend/app/services/: refresh.py
backend/scripts/: gen_third_place_table.py
backend/seed/: fifa.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/components/: BracketView.jsx  ChampionOdds.jsx  GroupTables.jsx  LastUpdated.jsx  Markdown.jsx  MatchList.jsx  NewsPanel.jsx  OddsTable.jsx  RefreshButton.jsx  TeamCard.jsx  WhatIf.jsx
