[project]
name = "fifa-cup-backend"
version = "0.1.0"
description = "FIFA World Cup 2026 prediction dashboard backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[tool.uv]
package = false
